# tgc

./: Cargo.toml  build.rs  default.nix  flake.nix  shell.nix
src/: main.rs  opt.rs
