[package]
name = "tgc"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"
license = "Unlicense OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "0.2.16", features = ["rt-threaded", "fs"] }
futures-util = "0.3.4"
thiserror = "1.0.14"
serde = { version = "1.0.106", features = ["derive"] }
structopt = "0.3.12"
rayon = "1.3.0"
serde_json = "1.0.51"
tonic = "0.2.0"
tgcd = { git = "https://github.com/foldu/tgcd", rev = "4263ea57de6b2fb5f3bb9131461243a9dac97e1a" }

[build-dependencies]
structopt = "0.3.12"
