[package]
name = "tgc"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"
license = "Unlicense OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "0.2.22", features = ["rt-threaded", "fs"] }
futures-util = "0.3.5"
thiserror = "1.0.20"
serde = { version = "1.0.115", features = ["derive"] }
structopt = "0.3.17"
rayon = "1.4.0"
serde_json = "1.0.57"
tonic = "0.3.1"
tgcd = { git = "https://github.com/foldu/tgcd", rev = "2734e459cd9b88fd26b3bcbf656cc4b2759f3274" }

[build-dependencies]
structopt = "0.3.17"
